FAVRDK-49: Fix links not showing on paralax mobile

--- a/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/03-organisms/branding-spot/branding-spot.css
+++ b/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/03-organisms/branding-spot/branding-spot.css
@@ -184,13 +184,10 @@
     .branding-spot__overlay,
     .branding-spot__overlay--links {
       opacity: 1;
+      transform: translateY(0);
     }
 
     @media (--viewport-sm-min) {
-
-      .branding-spot__overlay--links {
-        transform: translateY(0);
-      }
 
       .branding-spot__overlay {
         top: 50%;
